Add module access flags for AWT in JobHandler and TestGeneration